--- a/MainApp/MainApp/Views/MainPage.xaml
+++ b/MainApp/MainApp/Views/MainPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MainApp.ViewModels"
-             x:DataType="viewModels:HomeViewModel"
+             x:DataType="viewModels:TuningViewModel"
              x:Class="MainApp.Views.MainPage">
     <ContentPage.BindingContext>
-        <viewModels:HomeViewModel></viewModels:HomeViewModel>
+        <viewModels:TuningViewModel></viewModels:TuningViewModel>
     </ContentPage.BindingContext>
     <StackLayout Padding="10" VerticalOptions="Center">
         <Grid>
