--- a/MainApp/MainApp/Views/TuningResultPage.xaml
+++ b/MainApp/MainApp/Views/TuningResultPage.xaml
@@ -9,6 +9,38 @@
         <viewModels:TuningViewModel></viewModels:TuningViewModel>
     </ContentPage.BindingContext>
     <ContentPage.Content>
-        <Label Text="{Binding Plate}"></Label>
+        <Grid ColumnSpacing="2" Padding="50" ColumnDefinitions="*, *, *">
+            <Border>
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="20" />
+                </Border.StrokeShape>
+                <Grid BackgroundColor="Grey" Padding="20" RowDefinitions="Auto, Auto, *">
+                    <Label Text="Jouw voertuig"></Label>
+                    <Image Grid.Row="1" Height="350" Width="500" Source="https://pictures.vwe.nl/ATL/volkswagen/ATX_M2345_F2.jpg" />
+                    <Border Grid.Row="2" BackgroundColor="Beige">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="20" />
+                        </Border.StrokeShape>
+                        <Grid Padding="20" RowDefinitions="*, *, *, *" ColumnDefinitions="Auto, Auto, *, Auto, Auto" ColumnSpacing="10">
+                            <Label Grid.ColumnSpan="2" Text="{Binding CarData.Make}"></Label>
+                            <Label Grid.Row="1" Grid.Column="0" Text="Type"></Label>
+                            <Label Grid.Row="1" Grid.Column="1" Text="{Binding CarData.VehicleType}"></Label>
+                            <Label Grid.Row="2" Grid.Column="0" Text="Bouwjaar"></Label>
+                            <Label Grid.Row="2" Grid.Column="1" Text="{Binding CarData.MakeType}"></Label>
+                            <Label Grid.Row="3" Grid.Column="0" Text="Vermogen (PK)"></Label>
+                            <Label Grid.Row="3" Grid.Column="1" Text="68"></Label>
+                            <Label Grid.Row="1" Grid.Column="3" Text="Koppel"></Label>
+                            <Label Grid.Row="1" Grid.Column="4" Text="95"></Label>
+                            <Label Grid.Row="2" Grid.Column="3" Text="Acceleratie (0-100)"></Label>
+                            <Label Grid.Row="2" Grid.Column="4" Text="14.4 sec"></Label>
+                            <Label Grid.Row="3" Grid.Column="3" Text="Topsnelheid"></Label>
+                            <Label Grid.Row="3" Grid.Column="4" Text="161 km/u"></Label>
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Border>
+            <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="0" Grid.Column="1" Text="{Binding Plate}"></Label>
+            <Label HorizontalOptions="Center" VerticalOptions="Center" Grid.Row="0" Grid.Column="2" Text="{Binding Plate}"></Label>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
